# userPrivilegeManagerSystem

./: CMakeLists.txt  README.md  先看这里.docx  用户表.xlsx
SJwt/: CMakeLists.txt  SJwt.cpp  SJwt.h
SWidget/: CMakeLists.txt  SApp.cpp  SApp.h  SEventfilterObject.cpp  SEventfilterObject.h  SHeaderView.cpp  SHeaderView.h  SIODialog.cpp  SIODialog.h  SMaskWidget.cpp  SMaskWidget.h  SNavBar.cpp  SNavBar.h  SStandardPixmap.cpp  SStandardPixmap.h  SSwitchButton.cpp  SSwitchButton.h
SWidget/SItemDelegate/: SButtonDelegate.cpp  SButtonDelegate.h  SCheckDelegate.cpp  SCheckDelegate.h  SSwitchDelegate.cpp  SSwitchDelegate.h  SUrlDelegate.cpp  SUrlDelegate.h
UserPrivilegeManager-Client/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  ResourceClient.qrc  main.cpp
UserPrivilegeManager-Client/LoginRegister/: CMakeLists.txt  LoginRegisterDlg.cpp  LoginRegisterDlg.h  LoginRegister_Res.qrc
UserPrivilegeManager-Client/LoginRegister/LoginRegister_Res/: style.css
UserPrivilegeManager-Client/ResourceClient/: black.css  pink.css  style.css  white.css
UserPrivilegeManager-Client/SubPage/: CMakeLists.txt  PAddEditDlg.cpp  PAddEditDlg.h  PManagerPage.cpp  PManagerPage.h  PManagerPage.ui  PersonalPage.cpp  PersonalPage.h  RoleManagerPage.cpp  RoleManagerPage.h  RoleManagerPage.ui  UserAddDlg.cpp  UserAddDlg.h  UserDetailsDlg.cpp  UserDetailsDlg.h  UserEditDlg.cpp  UserEditDlg.h  UserManagerPage.cpp  UserManagerPage.h  UserManagerPage.ui  UserResetPasswdDlg.cpp  UserResetPasswdDlg.h
UserPrivilegeManager-Server/: CMakeLists.txt  Server.cpp  Server.h  main.cpp
Util/: CMakeLists.txt  SConfigFile.cpp  SConfigFile.h  SFieldTranslate.cpp  SFieldTranslate.h  SHttpClient.cpp  SHttpClient.h  SHttpPartParse.cpp  SHttpPartParse.h  SResultCode.h  SSqlConnectionPool.cpp  SSqlConnectionPool.h
成果/soft-client/: 用户表_.csv
成果/soft-server/logs/: log.txt
成果/soft-server/translations/: qt_de.qm  qt_fr.qm  qt_ja.qm  qt_pl.qm  qt_ru.qm
数据库部分/: user_privilege_manager_system.sql  先看这里.txt
