cmake_minimum_required(VERSION 3.10)

project(SWidget VERSION 1.0 LANGUAGES CXX)

set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Qt6 REQUIRED Widgets)

file(GLOB SWIDGET_SITEMDELEGATE_CPP ${CMAKE_CURRENT_SOURCE_DIR}/SItemDelegate/*.cpp)

file(GLOB SWIDGET_CPP ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
			
file(GLOB SWIDGET_H ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

add_library(${PROJECT_NAME} STATIC ${SWIDGET_CPP} ${SWIDGET_SITEMDELEGATE_CPP})

target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/SItemDelegate)
 
target_link_libraries(${PROJECT_NAME} PUBLIC Qt6::Widgets Util)
